--- a/my-react/src/Components/table/title/tabletitle.css
+++ b/my-react/src/Components/table/title/tabletitle.css
@@ -1,6 +1,8 @@
 .title__list{
     display: flex;
     justify-content: space-evenly;
+    background-color: var(--green-4);
+    color: #f0f0f0;
 }
 .title__item{
     padding: 24px 0;
